syntax = "proto3";

package runtime.api.config.security.v1;

import "config/security/v1/token.proto";
import "config/security/authn/basic/v1/credential.proto";
import "config/security/authn/apikey/v1/credential.proto";
import "config/security/authn/oidc/v1/credential.proto";

option go_package = "github.com/origadmin/runtime/api/gen/go/config/security/v1;configsecurityv1";

// CredentialSource is a generic container for transporting various types of
// credential source data between services (e.g., from a gateway to an auth service).
// This message acts as a Data Transfer Object (DTO) for credential information.
message CredentialSource {
  // The type of the credential, corresponding to the authenticator type.
  // Examples: "jwt", "apikey", "basic", "oidc", "presharedkey".
  string type = 1;

  // The specific credential payload.
  oneof payload {
    // Payload for HTTP Basic authentication.
    runtime.api.config.security.authn.basic.v1.BasicCredential basic = 2;

    // Payload for API Key or Preshared Key authentication.
    runtime.api.config.security.authn.apikey.v1.KeyCredential key = 3;

    // Payload for OIDC authentication.
    runtime.api.config.security.authn.oidc.v1.OidcCredential oidc = 4;

    // Payload for standard token-based flows like JWT and OAuth2.
    TokenCredential token = 5;
  }
}
